# XXMLCompiler

./: -.s  .gitignore  AdvancedFeaturesDemo.XXML  ArrayTest.XXML  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMPLETE_TOOLCHAIN_IMPLEMENTATION.md  COMPLETION_CHECKLIST.md  CONSOLE_INPUT_IMPLEMENTATION.md  CONTRIBUTING.md  COPY_MOVE_FIXES.md  ChainedMethodTest.XXML  ComprehensiveFinal.XXML.bak  ComprehensiveInputTest.XXML  ComprehensiveInputTest.cpp  ComprehensiveMultiFileTest.XXML  ConsoleIOTest.XXML  ConsoleInputTest.cpp  ConstructorTest.XXML  CopyMoveTest.cpp  CopyRefProofTest.cpp  DeferredValidationTest.XXML  DirectTemplateTest.XXML  DirectTemplateTest.cpp  EndToEndTest.XXML  ErrorMessageTest.txt  FEATURES_IMPLEMENTED.md  FEATURES_TESTED.md  FINAL_DELIVERABLES.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FinalTest.cpp  FullNamespaceTest.XXML  GoodbyeTest.XXML  Hello.XXML  Hello.cpp  HelloWorld.cpp  HelloWorld_link.ll  (+244 more)
.claude/: settings.local.json
Examples/: HelloWorld.XXML  SyscallExample.XXML  custom_type_example.cpp
Examples/Processors/: WarnUsageTest.XXML  WarningProcessor.XXML
Language/: Collections.XXML  Reflection.XXML
Language/Annotations/: Annotations.XXML  Deprecated.XXML  Experimental.XXML  Negative.XXML  NotEmpty.XXML  NotNull.XXML  Override.XXML  Positive.XXML  Range.XXML  Todo.XXML  Unsafe.XXML
Language/Collections/: Array.XXML  Array.XXML.bak  HashMap.XXML  HashMap.XXML.bak  HashMapIterator.XXML  IntegerList.XXML  IntegerList.XXML.bak  KeyValuePair.XXML  List.XXML  List.XXML.bak  ListIterator.XXML  List_PureXXML.XXML  List_PureXXML.XXML.bak  Queue.XXML  Queue.XXML.bak  Set.XXML  Set.XXML.bak  Set.XXML.disabled  SetIterator.XXML  Stack.XXML  Stack.XXML.bak  StringList.XXML  StringList.XXML.bak
Language/Concurrent/: Threading.XXML
Language/Core/: Bool.XXML  Double.XXML  Double.XXML.bak  Equatable.XXML  Float.XXML  Float.XXML.bak  Hashable.XXML  Integer.XXML  Iterable.XXML  Iterator.XXML  MathHelper.XXML  Mem.XXML  None.XXML  Sendable.XXML  Sharable.XXML  String.XXML
Language/Derives/: DeriveContext.XXML  Stringable.XXML
Language/Format/: JSON.XXML
Language/IO/: File.XXML  File.XXML.bak  File_PureXXML.XXML  File_PureXXML.XXML.bak
Language/Math/: Math.XXML
Language/Network/: HTTP.XXML  HTTP.XXML.bak
Language/Processor/: ProcessorAnnotationArg.XXML  ProcessorAnnotationArgs.XXML  ProcessorCompilationContext.XXML  ProcessorReflectionContext.XXML
Language/ProcessorCtx/: ProcessorAnnotationArg.XXML  ProcessorAnnotationArgs.XXML  ProcessorCompilationContext.XXML  ProcessorReflectionContext.XXML
Language/Reflection/: AnnotationArg.XXML  AnnotationInfo.XXML  GetType.XXML  MethodInfo.XXML  Ownership.XXML  ParameterInfo.XXML  PropertyInfo.XXML  Type.XXML
Language/System/: Console.XXML  System.XXML
Language/Test/: TestFile.XXML  TestFramework.XXML
Language/Text/: Regex.XXML  StringUtils.XXML
Language/Time/: DateTime.XXML
MyProject/App/: Main.XXML
MyProject/Utils/: Calculator.XXML
demos/ORM/: SimpleORM.XXML
demos/Plugin/: PluginSystem.XXML
demos/RPC/: SimpleRPC.XXML
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  COMPILETIME.md  CONSTRAINTS.md  FFI.md  IMPORTS.md  INDEX.md  LANGUAGE_SPEC.md  LIMITATIONS.md  REFLECTION_SYSTEM.md  ROADMAP.md  TEMPLATES.md  THREADING.md
docs/advanced/: ANNOTATIONS.md  DERIVES.md  DESTRUCTORS.md  NATIVE_TYPES.md  REFLECTION.md  THREADING.md
docs/language/: CLASSES.md  CONSTRAINTS.md  ENUMERATIONS.md  LAMBDAS.md  OWNERSHIP.md  STRUCTURES.md  SYNTAX.md  TEMPLATES.md
docs/stdlib/: COLLECTIONS.md  CONSOLE.md  CORE.md  FILE_IO.md  HTTP.md  ITERATORS.md  JSON.md  MATH.md  OVERVIEW.md  TESTING.md  TEXT.md  TIME.md
docs/tools/: ARCHITECTURE.md  CLI.md  VSCODE.md
glfw-xxml-package/: GLFW.XXML  README.md
glfw-xxml-package/examples/: SafeAPIBasicTest.XXML  SafeAPITest.XXML
include/: XXML.h
include/AnnotationProcessor/: AnnotationProcessor.h  ProcessorCompiler.h  ProcessorLoader.h
include/Backends/: CallGenerator.h  Cpp20Backend.h  DestructorManager.h  IRBuilder.h  LLVMBackend.h  LLVMType.h  LLVMValue.h  MethodResolver.h  NameMangler.h  OwnershipVerifier.h  SSAVerifier.h  SemanticGuard.h  SpecialMethodRegistry.h  StringEscaper.h  TypeConverter.h  TypeNormalizer.h  TypeSafetyChecker.h  ValueTracker.h
include/CodeGen/: CodeGenerator.h
include/Common/: Debug.h  Error.h  SourceLocation.h  Version.h.in
include/Core/: BackendRegistry.h  Concepts.h  (+8 more)
installer/: .env.local.example  README.md  build-installer-macos.sh  build-installer.ps1  build.cmd
runtime/: Integer.XXML  README.md  String.XXML  System.XXML  xxml_annotation_runtime.c  xxml_annotation_runtime.h  xxml_derive_api.c  xxml_derive_api.h  xxml_ffi_runtime.c  xxml_ffi_runtime.h  xxml_llvm_runtime.c  xxml_llvm_runtime.h  xxml_processor_api.c  xxml_processor_api.h  xxml_reflection_runtime.c  xxml_reflection_runtime.h  xxml_runtime.h
src/: main.cpp
tests/: AnnotationErrorTest.XXML  AnnotationMissingArgTest.XXML  AnnotationMultiArgTest.XXML  AnnotationRuntimeTest.XXML  AnnotationSemanticTest.XXML  AnnotationSystemTest.XXML  AnnotationTest.XXML  AnnotationTest1.XXML  AnnotationUndefinedTest.XXML  AnnotationUnknownArgTest.XXML  AnnotationValidationTest.XXML  AnnotationWithMethodTest.XXML  AnnotationsTest.XXML  AppendTest.XXML  BadProcessorTest.XXML  BasicTest.XXML  BoolCondTest.XXML  BoxTest.XXML  BraceStringTest.XXML  ChainedTemplateMethodTest.XXML  ClassInspectionTest.XXML  CompiletimeComprehensiveTest.XXML  CompiletimeTest.XXML  ComplexConstraintTest.XXML  ComplexTemplateTest.XXML  ComprehensiveConsoleTest.XXML  ComprehensiveFinal.XXML  ComprehensiveListTest.XXML  ComprehensiveTest.XXML  ConcurrencyConstraintTest.XXML  ConsoleInputTest.XXML  ConstraintViolationTest.XXML  ControlFlowTest.XXML  CopyMoveTest.XXML  CopyRefProofTest.XXML  DeferredTypeTest.XXML  DeprecatedTest.XXML  DeriveEqHashTest.XXML  DeriveGenericTest.XXML  DeriveMarkerTraitTest.XXML  (+208 more)
tools/lsp/: AnalysisEngine.cpp  AnalysisEngine.h  CMakeLists.txt  DocumentManager.cpp  DocumentManager.h  JsonRpc.cpp  JsonRpc.h  LSPServer.cpp  LSPServer.h  Protocol.h  main.cpp
(+207 files in other folders)
